# test_imgui_glfwm

./: .gitignore  CMakeLists.txt  imgui.ini
cmake/config/: Configure3rdpart.cmake  ConfigureDeps.cmake  ConfigurePython.cmake  MyConfigure.cmake  clear_incs_srcs.cmake  define.cmake  myBasicLibs.cmake
cmake/toolsets/: BasicTools.cmake  CompileTools.cmake  IncludeTools.cmake  Manage3rdpartTools.cmake  RemoveFIlesTools.cmake
include/GL/: glcorearb.h
include/GLFWM/: drawable.hpp  enums.hpp  event.hpp  event_handler.hpp  glfwm.hpp  update_map.hpp  utility.hpp  window.hpp  window_group.hpp
include/imgui/dock/: imgui_dock.h
include/imgui/imgui/: imgui.h  imgui_internal.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
include/imgui/imgui_user/: imgui_date_picker.h  imgui_user.h
include/imgui/imguizmo/: imguizmo.h
main/: demo_dock.cpp  demo_example.cpp  glfw_manager_demo.cpp  glfw_manager_demo_simplify.cpp  glfw_manager_demo_v2.cpp  glfw_manager_demo_v4.cpp  main.cpp
src/GL/: gl3w.c
src/GLFWM/: enums.cpp  event.cpp  glfwm.cpp  update_map.cpp  window.cpp  window_group.cpp
src/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
src/imgui/dock/: imgui_dock.cpp
src/imgui/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp
src/imgui/imgui_user/: imgui_date_picker.cpp  imgui_user.cpp
src/imgui/imguizmo/: imguizmo.cpp
